apps/showcase/cargo_check.log
warning: peak-ui@0.1.0: Loading environment from: ../.env.local
    Checking peak-ui v0.1.0 (/Users/vegarberentsen/Documents/PeakSuite/PeakUI/framework)
warning: unused imports: `PeakTheme`, `ThemeTokens`, and `ThemeTone`
 --> framework/src/reference/app/update.rs:7:18
  |
7 | use peak_theme::{PeakTheme, ThemeTokens, ThemeTone};
  |                  ^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `crate::core::Context`
  --> framework/src/reference/app/update.rs:10:5
   |
10 | use crate::core::Context;
   |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `LabMessage`
 --> framework/src/reference/pages/components/bar_chart.rs:2:29
  |
2 | use crate::reference::app::{LabMessage, Message, RenderMode};
  |                             ^^^^^^^^^^

warning: unused import: `LabMessage`
 --> framework/src/reference/pages/components/hstack.rs:2:29
  |
2 | use crate::reference::app::{LabMessage, Message, RenderMode};
  |                             ^^^^^^^^^^

warning: unused import: `ShellMessage`
 --> framework/src/reference/pages/components/modal_doc.rs:4:62
  |
4 | use crate::reference::app::{LabMessage, Message, RenderMode, ShellMessage};
  |                                                              ^^^^^^^^^^^^

warning: unused import: `crate::prelude::*`
 --> framework/src/reference/pages/components/pie_chart.rs:5:5
  |
5 | use crate::prelude::*;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `IntelligenceMessage`
 --> framework/src/reference/pages/landing/mod.rs:1:48
  |
1 | use super::super::app::{Message, ShellMessage, IntelligenceMessage, InteractionMessage};
  |                                                ^^^^^^^^^^^^^^^^^^^

warning: unused import: `ThemeTokens`
 --> framework/src/reference/pages/settings/appearance.rs:4:18
  |
4 | use peak_theme::{ThemeTokens, ThemeTone};
  |                  ^^^^^^^^^^^

warning: unused imports: `InteractionMessage` and `ShellNavigationMode`
 --> framework/src/reference/views/canvas.rs:1:25
  |
1 | use super::super::app::{InteractionMessage, Message, ShellMessage, ShellNavigationMode};
  |                         ^^^^^^^^^^^^^^^^^^                         ^^^^^^^^^^^^^^^^^^^

error[E0609]: no field `contentlast` on type `&ChatMessage`
   --> framework/src/reference/app/update.rs:246:73
    |
246 | ...                   return self.process_assistant_actions(&last.contentlast.content.clone());
    |                                                                   ^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `role`, `content`

error[E0308]: mismatched types
   --> framework/src/reference/pages/settings/ai.rs:122:51
    |
122 |                         |b| Message::Intelligence(InteractionMessage::SetExposure(b)),
    |                             --------------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `IntelligenceMessage`, found `InteractionMessage`
    |                             |
    |                             arguments to this enum variant are incorrect
    |
note: tuple variant defined here
   --> framework/src/reference/app/message.rs:107:5
    |
107 |     Intelligence(IntelligenceMessage),
    |     ^^^^^^^^^^^^

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
warning: `peak-ui` (lib) generated 9 warnings
warning: peak-ui@0.1.0: Loading environment from: ../.env.local
error: could not compile `peak-ui` (lib) due to 2 previous errors; 9 warnings emitted
